--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@lit/context": "^1.1.5",
         "@shoelace-style/shoelace": "^2.20.1",
+        "autostore": "^1.3.21",
         "flex-tools": "^1.5.2",
         "lit": "^3.3.0"
     }
