--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "magic-layout-repos",
   "module": "index.ts",
-  "version":"0.0.1",
-  "type": "module",  
+  "version": "0.0.1",
+  "type": "module",
   "devDependencies": {
+    "@biomejs/biome": "2.1.1",
     "@types/bun": "latest"
   },
   "peerDependencies": {
