--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
     "editor.formatOnSave": true,
-    "prettier.tabWidth": 4 
+    "prettier.tabWidth": 4,
+    "idf.portWin": "COM4"
 }
