--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,10 @@
 			"recommended": true,
 			"suspicious": {
 				"noExplicitAny": "off"
-			}
+			},
+            "style": {
+                "noNonNullAssertion": "off"
+            }
 		}
 	},
 	"javascript": {
