--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "editor.detectIndentation": false,
     "editor.formatOnSave": true,
     "prettier.tabWidth": 4,
-    "idf.portWin": "COM4"
+    "editor.defaultFormatter": "biomejs.biome",
+    "editor.codeActionsOnSave": {
+        "source.organizeImports.biome": "explicit"
+    }
 }
