--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "peerDependencies": {
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.0.0",
+  "packageManager": "bun@1.2.20^",
   "workspaces": ["packages/*"]
 }
