--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -20,6 +20,7 @@
         "@shoelace-style/shoelace": "^2.20.1",
         "autostore": "^3.0.1",
         "flex-tools": "^1.5.2",
-        "lit": "^3.3.0"
+        "lit": "^3.3.0",
+        "themepro": "^1.0.5"
     }
 }
