--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,8 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "tab",
+		"lineWidth": 120
 	},
 	"linter": {
 		"enabled": true,
@@ -19,9 +20,9 @@
 			"suspicious": {
 				"noExplicitAny": "off"
 			},
-            "style": {
-                "noNonNullAssertion": "off"
-            }
+			"style": {
+				"noNonNullAssertion": "off"
+			}
 		}
 	},
 	"javascript": {
