--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -16,10 +16,11 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
-        "@autostorejs/form": "^3.1.9",
+        "@autostorejs/form": "^3.1.10",
         "@lit/context": "^1.1.5",
         "@shoelace-style/shoelace": "^2.20.1",
-        "autostore": "^3.1.9",
+        "autostore": "^3.1.10",
+        "fastevent": "^2.2.10",
         "flex-tools": "^1.5.6",
         "lit": "^3.3.0",
         "themepro": "^1.0.6"
